k8s/ingress/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalIPs:
  - 192.168.103.240
  - 192.168.103.192
  - 192.168.103.189
  - 192.168.103.201
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      # nodePort: 30100
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      # nodePort: 30101
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx

---
