k8s/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "api.com"
    http:
      paths:
        - path: /
          backend:
            serviceName: api
            servicePort: 5000
  - host: "gogs.com"
    http:
      paths:
        - path: /
          backend:
            serviceName: gogs
            servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "grafana.com"
    http:
      paths:
        - path: /
          backend:
            serviceName: kube-prometheus-grafana
            servicePort: 3000
